tests/sema/fail/v5_fail_str_replace_char_removed.ep
# COMPILE_FAIL: unknown function str_replace_char

fun main(): void {
    let s = str_replace_char("a/b", '/', '_')
}
